--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".BannerActivity"
+            android:label="@string/title_activity_banner"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".SliderActivity"
             android:label="@string/title_activity_slider"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
